client/src/index.css
/* ... */
.yourProfile .btn-push{
  background: #f1cf24;
  -ms-box-shadow: 0px 5px 0px #ab9e00;
  -o-box-shadow: 0px 5px 0px #ab9e00;
  box-shadow: 0px 5px 0px #ab9e00;
}
.btn-push-green, .yourProfile .btn-push-green{
  background: rgb(56,201,29);
  background: linear-gradient(180deg, rgba(132,249,40,1) 0%, rgba(56,201,29,1) 100%);
  -webkit-box-shadow: 0px 5px 0px #319244;
  -moz-box-shadow: 0px 5px 0px #319244;
  -ms-box-shadow: 0px 5px 0px #319244;
  -o-box-shadow: 0px 5px 0px #319244;
  box-shadow: 0px 5px 0px #319244;
  text-shadow: 2px 4px 4px #319244;
}

.btn-push-blue{
  background: rgb(64, 158, 255);
  background: linear-gradient(180deg, rgb(61, 179, 255) 0%, rgb(11, 146, 194) 100%);
  -webkit-box-shadow: 0px 5px 0px #1c6186;
  -moz-box-shadow: 0px 5px 0px #1c6186;
  -ms-box-shadow: 0px 5px 0px #1c6186;
  -o-box-shadow: 0px 5px 0px #1c6186;
  box-shadow: 0px 5px 0px #1c6186;
  text-shadow: 1px 2px 4px #000000
}

.btn-push-gray h6{
  margin: 0;
  font-size: 1.5rem
}
.btn-push-blue{
  font-size: 1.2rem;
}
.btn-push-gray span{
  margin: 0;
  font-size: 1rem;
}

/*==========  Active State  ==========*/
.btn-push:active {
  position: relative;
  top: 5px;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  -o-box-shadow: none !important;
  box-shadow: none !important;
  -webkit-transition: All 250ms ease;
  -moz-transition: All 250ms ease;
  -o-transition: All 250ms ease;
  -ms-transition: All 250ms ease;
  transition: All 250ms ease;
}

/*==========  Hover State  ==========*/
.btn-push:hover {
  box-shadow: 0px 7px 0px #c0392b; /* ombre légèrement plus grande */
  color: #ffffff; /* couleur du texte blanche pour un contraste élevé */
}
.btn-push-gray:hover {
  box-shadow: 0px 7px 0px #757575; /* ombre légèrement plus grande */
  color: #ffffff; /* couleur du texte blanche pour un contraste élevé */
}
.btn-push-green:hover {
  box-shadow: 0px 7px 0px #14a12e; /* ombre légèrement plus grande */
  color: #ffffff; /* couleur du texte blanche pour un contraste élevé */
}
.btn-push-blue:hover {
  box-shadow: 0px 7px 0px #274f79; /* ombre légèrement plus grande */
  color: #ffffff; /* couleur du texte blanche pour un contraste élevé */
}

.btn-push:disabled{
  background: rgb(136, 136, 136);
  background: linear-gradient(180deg, rgb(131, 131, 131) 0%, rgb(101, 101, 101) 100%);
  -webkit-box-shadow: 0px 5px 0px #4b4b4b;
  -moz-box-shadow: 0px 5px 0px #4b4b4b;
  -ms-box-shadow: 0px 5px 0px #4b4b4b;
  -o-box-shadow: 0px 5px 0px #4b4b4b;
  box-shadow: 0px 5px 0px #4b4b4b;
  text-shadow: 2px 4px 4px #4b4b4b;
}




.btn-push a{
  padding: 15px 50px;

  border-radius: 10px;
  color: white;
  font-weight: bold;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.2s;
}
.buzz-btn-container{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.buzz-btn{
  aspect-ratio: 1/1;
  padding: 4rem;
  border-radius: 2000px;
}

.game_button a:hover{
  background-color: cornflowerblue;
}


.modal_bg {
  background-color: rgba(0,0,0,0.4);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.modal{
  margin: 2rem;
  width: 100%;
  /*max-width: 300px;*/
  max-height: 90vh;
  overflow: hidden;
  background: rgb(141,147,160);
  background: linear-gradient(180deg, rgba(141,147,160,1) 0%, rgba(118,124,140,1) 10%, rgba(105,112,129,1) 18%, rgba(93,102,121,1) 21%, rgba(89,98,118,1) 100%);
  border-radius: 15px;
  border: 1.5px solid #777f8e;
  padding: 0.7rem 0.7rem 0.7rem 0.7rem;
  display: flex;
  flex-direction: column;
}
.modal_content {
  background-color: #e4f3ff;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1.5rem 2rem 2rem 2rem;
  gap: 1rem;
  border-radius: 0.5rem;
  position: relative;
  overflow-y: scroll;
}

/*.modal .modal_content_title{*/
/*  background-color: #19acff;*/
/*  color: white;*/
/*  width: 100%;*/
/*  text-align: center;*/
/*  border-radius: 0.5rem;*/
/*  position: relative;*/
/*  z-index: 2;*/
/*  padding: 1rem 0;*/
/*  box-shadow: 0px 5px 0px #0a80ce;*/
/*  font-family: "Fredoka One";*/
/*  !*text-shadow: 4px 1px 2px pink;*!*/
/*  letter-spacing: 0.1rem;*/
/*}*/
.modal .modal_content_title{
  color: white;
  width: 100%;
  text-align: center;
  border-radius: 0.5rem;
  padding: 0 0 0.5rem 0;
  font-family: "Fredoka One";
  text-shadow: 2px 1px 2px black;
  letter-spacing: 0.1rem;
  display: flex;
  justify-content: space-between
}
.modal .modal_content_title h2{
  margin: 0;
}

.modal .modal_content input{
  background-color: #b7d3ed;
  padding: 1rem 0;
  padding-left: 1rem;
  border-radius: 0.5rem;
  border: 0;
}
.modal .modal_content input[type="range"]{
  padding:0;
  width: 100%;
}

.modal .modal-tab{
  font-size: 1rem;
  color: white;
  border: 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  padding: 0.5rem 1rem;
  font-family: "Fredoka One";
  background-color: #81a3bb;
  text-shadow: 1px 1px 6px black;
}
.modal .modal-tab.active{
  background-color: #f9fcff;
}
.modal .tab-content{
  border-radius: 0.5rem;
  padding: 1rem;
  background-color: #f9fcff;
}

.tab-content ul{
  padding: 0;
  margin: 0;
}

.tab-content .server-info{
  display:flex;
  gap:1rem;
  align-items:center;
  padding:1rem
}
.tab-content .server-info-rules{
  color:white;
  background-color:#0081cc;
  padding:1rem;
  display:flex;
  background: rgb(0,104,172);
  background: linear-gradient(180deg, rgba(0,104,172,1) 0%, rgba(59,187,247,1) 100%);
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.tab-content .server-info-rule{
  width:100%;
  text-align:center;
  border-right:1px solid white;
  padding: 0 0.2rem 0 ;
}


.z_top{
  position: fixed;
  padding: 3rem;
  z-index: 9999;
}
/* ... */

